# lenina

./: .env  .gitignore  CHANGELOG.md  DOCKERHUB.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  deployment.md  logs-api.md
scripts/ralph/: progress.txt
skills/lenina/: SKILL.md
tasks/: prd-lenina.md  prd.json
tasks/001-dependency-upgrade/: progress.md
tests/: test_main.py
